k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: patient-api
spec:
  selector:
    app: patient-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
